# audio-connector-server-samples

./: .gitignore  README.md
echo_server_app/: README.md  echo_server.py  env.example  helper.py  requirements.txt  vonage_sdk.py
unified_sample_app/: README.md  env.example  helper.py  opentok_sdk.py  requirements.txt  sample_app.py  vonage_sdk.py
vonage-ac-audio-transport/: README.md  bot.py  env.example  pyproject.toml  server.py
vonage-ac-s2s/: README.md  bot.py  pyproject.toml
vonage-ac-translation-bot/: README.md  bot.py  env.example  pyproject.toml  server.py
vonage-ai-triage-nurse/: README.md  bot.py  env.example  n8n_client.py  pyproject.toml  quickstart.sh  server.py
vonage-ai-triage-nurse/n8n/: README.md  docker-compose.yml  env.example
vonage-ai-triage-nurse/n8n/data/: config  database.sqlite  database.sqlite-shm  database.sqlite-wal
vonage-ai-triage-nurse/n8n/workflows/: vonage-ai-triage-nurse.workflow.json
vonage-ai-triage-nurse/transcripts/: triage_b4bae7cf23e4.txt  triage_e0d2eec66daa.txt  triage_e2e12345.txt  triage_f6839354773e.txt
vonage-audio-bot/: env.example  pyproject.toml
vonage-shoe-store-audio-bot/: README.md  bot.py  env.example  pyproject.toml  server.py  workflow_client.py
vonage-shoe-store-audio-bot/n8n/: README.md  docker-compose.yml
vonage-shoe-store-audio-bot/n8n/data/: config  database.sqlite  database.sqlite-shm  database.sqlite-wal
vonage-shoe-store-audio-bot/n8n/workflows/: vonage-shoe-store-audio-bot.workflow.json
vonage-shoe-store-audio-bot/transcripts/: shoe_store_067a79dad488.txt  shoe_store_2b96e23a736f.txt  shoe_store_a9c0a7d16054.txt
vonage-voice-appointment-bot/: README.md  bot.py  env.example  pyproject.toml  server.py
vonage-voice-mcp-server/mcp-tool-server/: README.md  env.example  pyproject.toml  server.py  storage.py
vonage-voice-mcp-server/voice-agent/: README.md  bot.py  env.example  pyproject.toml  server.py
vonage-voice-mcp-server/voice-agent/kb/: policies.md  pricing.md
