[project]
name = "vonage-voice-mcp-server"
version = "0.1.0"
description = "Vonage Voice API agent using Pipecat + OpenAI + MCP Tool Server."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pipecat-ai[openai,websocket,silero,runner]>=0.0.99",
  "python-dotenv",
  "uvicorn[standard]",
  "httpx>=0.27.0",
  "fastapi",
  "loguru",
]
